Made a bunch of changes

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,6 +3,7 @@
     text-align : right;
     border-width : 1px;
     border-bottom-style : solid;
+    padding : 2px;
 }
 
 .choose button, .reset {
