--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <script src="static/js/login.js"></script>
   </head>
   <body>
-    Enter a name (so I can track which changes are made by one person):<br>
+    <!--Enter a name (so I can track which changes are made by one person):<br>-->
     <input id="name"><button>Submit</button>
   </body>
 </html>
